--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,21 @@
   align-items: center;
   min-height: 100vh;
 }
+
+.app-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 20px;
+  gap: 20px;
+}
+
+.app-item {
+  display: grid;
+  grid-template-rows: auto auto;
+  border: #ffffffde;
+  border-radius: 20px;
+  gap: 10px;
+  padding: 10px;
+  border-style: solid;
+  min-width: 10vw;
+}
