--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -95,3 +95,15 @@
 .project-item:hover {
   background-color: #ffffff20;
 }
+
+.back-button {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: underline;
+}
