added social buttons

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -109,7 +109,8 @@
 }
 
 .contact {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
 }
