--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -114,3 +114,15 @@
   justify-content: center;
   gap: 5px;
 }
+
+@media (max-width: 800px) {
+  .project-item-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .skip {
+    display: none;
+  }
+}
