updated to use custom slide component

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -116,13 +116,13 @@
 }
 
 @media (max-width: 800px) {
-  .project-item-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   .skip {
     display: none;
   }
+}
+
+.slideshow-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
