--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -125,6 +125,12 @@
   margin-left: 20px;
 }
 
+.app-img-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 @media (max-width: 800px) {
   .skip {
     display: none;
@@ -132,6 +138,11 @@
   .app-img {
     width: 300px;
     height: auto;
+  }
+  .app-img-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
