--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -122,7 +122,8 @@
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
-  margin-left: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 @media (max-width: 800px) {
@@ -130,7 +131,7 @@
     display: none;
   }
   .app-img {
-    width: 250px;
+    width: 300px;
     height: auto;
   }
 }
