--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
   color-scheme: light dark;
   color: #ffffffde !important;
-  background: radial-gradient(circle at 24.1% 68.8%, rgb(50,50,50) 0%, rgb(0,0,0) 99.4%)
+  background: rgb(50,50,50)
   /* background-color: #242424; */
 
   font-synthesis: none;
