fixed styling issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
   color-scheme: light dark;
   color: #ffffffde !important;
-  background: rgb(50,50,50)
+  background: #323232;
   /* background-color: #242424; */
 
   font-synthesis: none;
