--- a/src/styles/markdown-styles.module.css
+++ b/src/styles/markdown-styles.module.css
@@ -32,3 +32,17 @@
   text-align: center;
   margin-bottom: 1em;
 }
+
+.reactMarkdown a {
+  color: var(--main-blue);
+}
+
+.reactMarkdown a:hover {
+  color: var(--main-white);
+}
+
+@media (max-width: 600px) {
+  .reactMarkdown {
+    padding: 0 10px;
+  }
+}
