--- a/src/routes/App.css
+++ b/src/routes/App.css
@@ -176,6 +176,9 @@ img {
   margin-bottom: 1em;
 }
 
+.post {
+}
+
 .react-markdown a {
   color: var(--main-blue);
 }
@@ -184,11 +187,6 @@ img {
   color: var(--main-white);
 }
 
-@media (max-width: 600px) {
-  .react-markdown {
-    padding: 0 10px;
-  }
-}
 
 .post-list {
   list-style: none;
@@ -284,6 +282,21 @@ img {
 }
 
 @media (max-width: 600px) {
+
+    .react-markdown {
+    padding: 0 0px;
+    margin-top: 0px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+  }
+
+  .title {
+    font-size: 1.5em; 
+  }
+
+  .date {
+    font-size: 0.8em; 
+  }
   .navbar {
     flex-direction: column;
     text-align: center;
@@ -300,4 +313,10 @@ img {
   .socials {
     margin-top: 10px;
   }
+
+  .post {
+      margin-top: 140px;
+      max-width: 80%;
+  }
+
 }
